mongo-deployment-hostpath-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: praveen-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        volumeMounts:
          - name: praveen-storage
            mountPath: /data/db
      volumes:
        - name: praveen-storage
          hostPath:
            path: /ust
            type: Directory
