gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
  name: praveen-gateway
  namespace: praveen-ns 
spec:
  gatewayClassName: kgateway
  listners:
  - name: http
    protocol: HTTP 
    port: 80
    allowedRoutes:
      namespace:
        from: Same
