httpRoutes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-routes 
  namespace: praveen-ns
spec:
  parentRefs:
    - name: praveen-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fitness
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
